...
        inProgressLift={inProgressLift}
        prLifts={prLifts}
        onSelect={setSelectedLift}
      />
      <FlatList
        ref={listRef}
        testID="home-lift-carousel"
        data={enabledLifts}
        keyExtractor={(l) => l}
        renderItem={renderItem}
        horizontal
        pagingEnabled
        showsHorizontalScrollIndicator={false}
...
